2012 Passando Parâmetros de Paginação e Ajustando as Assertions